--- a/TurtleEscape/TurtleEscape/TurtleEscape/TurtleEscape.csproj
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TurtleEscape.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Index.htm" />
+    <Content Include="TestCode\CanvasForPato.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
